--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://59.110.168.107:3306/test
+spring.datasource.url = jdbc:mysql://x.x.x.x:3306/test
 spring.datasource.username = root
-spring.datasource.password = uiysvi2232895
+spring.datasource.password = xxxxx
 
 ## \u8BBE\u5B9A flyway \u5C5E\u6027
 # flyway \u7684 clean \u547D\u4EE4\u4F1A\u5220\u9664\u6307\u5B9A schema \u4E0B\u7684\u6240\u6709 table, \u6740\u4F24\u529B\u592A\u5927\u4E86, \u5E94\u8BE5\u7981\u6389.
